--- a/TodoApp/Views/_LayoutPage1.cshtml
+++ b/TodoApp/Views/_LayoutPage1.cshtml
@@ -4,9 +4,10 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
+    <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
-    <div>
+    <div class="container">
         @RenderBody()
     </div>
 </body>
