--- a/TodoApp/Views/_LayoutPage1.cshtml
+++ b/TodoApp/Views/_LayoutPage1.cshtml
@@ -14,6 +14,12 @@
             // IsAuthenticated が true ならログイン状態
             @Html.ActionLink("ログアウト", "SignOut", new { Controller = "Login"})
 
+            if (User.IsInRole("Administrators"))
+            {
+                <span>|</span>
+                @Html.ActionLink("ユーザー管理", "Index", new { Controller = "Users" });
+            }
+
         }
     </div>
     <div class="container">
