--- a/TodoApp/Views/Users/Create.cshtml
+++ b/TodoApp/Views/Users/Create.cshtml
@@ -9,6 +9,7 @@
 
 
 @using (Html.BeginForm()) 
+
 {
     @Html.AntiForgeryToken()
     
@@ -30,6 +31,12 @@
                 @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
             </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.RoleIds, htmlAttributes: new { @class = "Control-label col-md-2"})
+
+
         </div>
 
         <div class="form-group">
